apps/production/apps/esphome/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: esphome
  annotations:
    external-dns.alpha.kubernetes.io/hostname: esphome.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - esphome.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: esphome
          port: 6052
